<resources>

    <string name="app_name">NotifyMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_screen">NotifyMe</string>
    <string name="_Note">Nueva Nota</string>
    <string name="_NoteGps">Nueva Nota GPS</string>
    <string name="_ToDoList">Notas</string>
    <string name="_Exit">Salir</string>
    <string name="_Descartar">Descartar</string>
    <string name="_Date">Fecha Limite</string>
    <string name="_Location">GPS</string>
    <string name="_SortNotes">Ordenar Notas por:</string>
    <string name="_Save">Guardar</string>
     <string name="_Clean">Limpiar</string>
    <string name="_Category">Categoria</string>
    <string name="_Settings">Ajustes</string>
    <string name="_Name">¿Como le pondre a esta tarea?</string>
    <string name="_Description">¿Que tengo que hacer?</string>
    <string name="title_activity_create_note">CreateNote</string>
    <string name="title_activity_settings">Settings</string>
    <string name="_TurnNotifications">Activar/Desactivar Notificaciones</string>
    <string name="_Distance">Distancia Minima Requerida</string>
    <string name="_Frecuency">Frecuencia de Recordatorio</string>
    <string name="_Layout">Mostrar Notificaciones</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_map_chooser">MapChooser</string>

</resources>