<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height ="match_parent"
    android:background="@drawable/backgroundcreatenote">

    <TextView
        android:id="@+id/_NameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="9pt"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="22dp"
        android:text="@string/_Name" />

    <EditText
        android:id="@+id/_NameText"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_below="@+id/_NameLabel"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        android:textSize="10pt"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/_DescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_NameText"
        android:textSize="9pt"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/_Description" />

    <EditText
        android:id="@+id/_NoteText"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:layout_below="@+id/_DescriptionLabel"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="12dp"
        android:textSize="9pt"
        android:background="#FFFFFF"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/DateButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textSize="9pt"
        android:layout_below="@+id/_NoteText"
        android:layout_marginTop="26dp"
        android:layout_alignLeft="@+id/_NoteText"
        android:text="@string/_Date"
        android:onClick="showDatePickerDialog" />

    <Button
        android:id="@+id/LocationButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textSize="9pt"
        android:layout_alignBaseline="@+id/DateButton"
        android:layout_alignRight="@+id/_NoteText"
        android:text= "@string/_Location"
        android:onClick="MapActivity" 
        />
    
    <Button
        android:id="@+id/Categoria"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textSize="9pt"
        android:layout_below="@+id/DateButton"
        android:layout_alignRight="@+id/DateButton"
        android:layout_marginTop="12dp"
        android:text="@string/_Category"
        android:onClick="CategoriaActivity" />

     <Button
         android:id="@+id/LimpiarButton"
         android:layout_width="150dp"
        android:layout_height="60dp"
        android:textSize="9pt"
         android:layout_alignBaseline="@+id/Categoria"
         android:layout_alignBottom="@+id/Categoria"
         android:layout_alignLeft="@+id/LocationButton"
         android:text="@string/_Clean" 
         android:onClick="limpiar"/>
    
    
     <Button
        android:id="@+id/Save"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textSize="9pt"
        android:layout_below="@+id/Categoria"
        android:layout_alignRight="@+id/Categoria"
        android:layout_marginTop="10dp"
        android:text="@string/_Save"
        android:onClick="SaveNote"/>

     <Button
         android:id="@+id/ExitNote"
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:textSize="9pt"
         android:layout_alignBaseline="@+id/Save"
         android:layout_alignBottom="@+id/Save"
         android:layout_alignLeft="@+id/LimpiarButton"
         android:text="@string/_Descartar" 
         android:onClick="Exit"/>

</RelativeLayout>
